教室，白板ppt播放图片

--- a/app/src/main/res/layout/fragment_classroom_img_edit.xml
+++ b/app/src/main/res/layout/fragment_classroom_img_edit.xml
@@ -24,13 +24,12 @@
 
     <!--视频涂鸦面板-->
     <RelativeLayout
-            android:id="@+id/video_doodle_panel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true">
 
         <ImageView
-                android:id="@+id/back_in_doodle"
+                android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/cr_video_edit_back_btn"
@@ -54,6 +53,22 @@
 
         <TextView
                 android:id="@+id/save_doodle"
+                android:layout_marginRight="@dimen/px20"
+                android:layout_marginTop="@dimen/px20"
+                android:layout_toLeftOf="@+id/edit_done_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/px20"
+                android:paddingRight="@dimen/px20"
+                android:paddingTop="@dimen/px10"
+                android:paddingBottom="@dimen/px10"
+                android:textSize="@dimen/px28"
+                android:textColor="@color/font_white"
+                android:text="@string/save"
+                android:background="@drawable/cr_corner_blue_bg"/>
+
+        <TextView
+                android:id="@+id/edit_done_btn"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/px20"
                 android:layout_marginTop="@dimen/px20"
@@ -65,7 +80,7 @@
                 android:paddingBottom="@dimen/px10"
                 android:textSize="@dimen/px28"
                 android:textColor="@color/font_white"
-                android:text="@string/save"
+                android:text="@string/edit"
                 android:background="@drawable/cr_corner_blue_bg"/>
 
     </RelativeLayout>
