--- a/app/src/main/res/layout/layout_full_screen_msg_item.xml
+++ b/app/src/main/res/layout/layout_full_screen_msg_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="gone"
-            android:background="#44000000"
+            android:background="@drawable/cr_corner_fc_talk_bg"
             android:paddingLeft="@dimen/px10"
             android:paddingRight="@dimen/px10"
             android:paddingTop="@dimen/px8"
