教室，修改动画，布局样式调整。

--- a/app/src/main/res/layout/fragment_classroom_play.xml
+++ b/app/src/main/res/layout/fragment_classroom_play.xml
@@ -62,6 +62,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:visibility="gone"
+                android:layout_marginRight="@dimen/px8"
                 android:src="@drawable/cr_publish_take_pic"/>
     </RelativeLayout>
 
