--- a/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
+++ b/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
@@ -4,7 +4,8 @@
         android:id="@+id/fc_bottom_panel"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/px8">
 
     <ImageView
             android:id="@+id/fc_land_portrait_btn"
