--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -17,6 +17,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="@dimen/px50"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal"
+            android:visibility="gone"/>
+
+    <cn.xiaojs.xma.ui.widget.banner.PageNumView
+            android:id="@+id/text_pager_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="@dimen/px50"
+            android:orientation="horizontal"
+            android:textColor="@color/white"
+            />
 
 </FrameLayout>
