--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -132,4 +132,9 @@
         <item>扫一扫</item>
         <item>开课</item>
     </string-array>
+
+    <string-array name="add_menu2">
+        <item>公开开课</item>
+        <item>开班</item>
+    </string-array>
 </resources>
