--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -91,7 +91,7 @@
 
     <color name="light_grey">#fcfcfc</color>
     <color name="moment_comment_bg">#eaecef</color>
-    
+
     <color name="light_blue">#ecf6fa</color>
     <color name="light_blue1">#ebf6fa</color>
     <color name="light_blue2">#95cee3</color>
@@ -147,5 +147,8 @@
     <color name="gray_line">#e7e8ea</color>
     <color name="gray_item_bg">#f7f9fa</color>
     <color name="orange_point">#ff4343</color>
+
+    <color name="week_header_text_color">#d3bda7</color>
+    <color name="date_picked_color">#198CFF</color>
 
 </resources>
