教室，推流横竖屏切换，播放端同步切换（待优化，未终极解决）

--- a/app/src/main/res/layout/fragment_classroom_publish.xml
+++ b/app/src/main/res/layout/fragment_classroom_publish.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:videoplayer="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/publish_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -24,7 +25,8 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/px10"
             android:layout_marginBottom="@dimen/px10"
-            android:layout_above="@+id/discussion_list_view"/>
+            android:layout_above="@+id/discussion_list_view"
+            videoplayer:recycle_player="true"/>
 
     <ImageView
             android:id="@+id/close_play_full_screen"
