--- a/app/src/main/res/layout/fragment_classroom_play.xml
+++ b/app/src/main/res/layout/fragment_classroom_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:videoplayer="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -9,12 +10,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black">
+
         <cn.xiaojs.xma.ui.classroom.live.view.PlayerTextureView
                 android:id="@+id/play_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:visibility="visible"/>
+                android:visibility="visible"
+                videoplayer:recycle_player="true"/>
 
         <!--视频推流顶部面板-->
         <include
