教室，1.添加m3u8文件播放支持 2.ui页面调整

--- a/app/src/main/res/layout/layout_classroom_time_status_bar.xml
+++ b/app/src/main/res/layout/layout_classroom_time_status_bar.xml
@@ -13,10 +13,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:padding="@dimen/px10"
+            android:padding="@dimen/px8"
+            android:includeFontPadding="false"
             android:textColor="@color/font_white"
-            android:textSize="@dimen/font_26px"
-            android:drawablePadding="@dimen/px10"
+            android:textSize="@dimen/font_22px"
+            android:drawablePadding="@dimen/px8"
             android:background="@drawable/cr_corner_gray_bg"
             android:layout_marginLeft="@dimen/px20"
             android:layout_marginTop="@dimen/px20"/>
@@ -28,10 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/count_down_time"
-            android:padding="@dimen/px10"
+            android:padding="@dimen/px8"
+            android:includeFontPadding="false"
             android:textColor="@color/font_white"
-            android:textSize="@dimen/font_26px"
-            android:drawablePadding="@dimen/px10"
+            android:textSize="@dimen/font_22px"
+            android:drawablePadding="@dimen/px8"
             android:background="@drawable/cr_corner_gray_bg"
             android:layout_marginLeft="@dimen/px15"
             android:visibility="gone"
