--- a/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
+++ b/app/src/main/res/layout/layout_classroom_panel_bottom_fc.xml
@@ -18,7 +18,7 @@
             android:paddingBottom="@dimen/px20"
             android:src="@drawable/ic_cr_land_portrait"/>
 
-    <ImageView
+    <cn.xiaojs.xma.ui.widget.MessageImageView
             android:id="@+id/fc_open_contact_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_toLeftOf="@+id/fc_hide_show_talk_btn"
             android:src="@drawable/ic_cr_fc_talk"/>
 
-    <ImageView
+    <cn.xiaojs.xma.ui.widget.MessageImageView
             android:id="@+id/fc_hide_show_talk_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
