--- a/app/src/main/res/layout/fragment_live_lesson_creation.xml
+++ b/app/src/main/res/layout/fragment_live_lesson_creation.xml
@@ -40,6 +40,7 @@
                     android:text="@string/lesson_creation_tips"
                     android:textSize="@dimen/font_26px"
                     android:textColor="@color/font_dark_gray"/>
+
             <ImageView
                     android:id="@+id/lesson_creation_tips_close"
                     android:layout_width="wrap_content"
@@ -66,6 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_state_fail_msg_tips"/>
+
             <TextView
                     android:id="@+id/status_fail_reason"
                     android:layout_width="wrap_content"
@@ -120,23 +122,47 @@
         <LinearLayout
                 android:layout_marginTop="@dimen/px32"
                 style="@style/LiveLessonItem"
-                android:visibility="gone">
+                android:visibility="visible"
+                android:orientation="vertical">
 
             <TextView
                     style="@style/LiveLessonCreateTitle"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/enroll_mandatory"/>
-
-            <ToggleButton
-                    android:id="@+id/enroll_switcher"
                     android:layout_width="wrap_content"
+                    android:text="@string/student_need_enroll_or_not"/>
+
+            <RadioGroup
+                    android:id="@+id/mandatory_layout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/toggle_btn_selector"
-                    android:textOff=""
-                    android:textOn=""/>
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginBottom="@dimen/px54">
+
+                <RadioButton
+                        android:id="@+id/mandatory_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/enroll_mandatory"
+                        android:textSize="@dimen/font_28px"
+                        android:textColor="@color/font_dark_gray"
+                        android:drawablePadding="@dimen/px14"
+                        android:button="@drawable/single_check_selector"/>
+
+                <RadioButton
+                        android:id="@+id/no_mandatory_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/no_need_enroll"
+                        android:textSize="@dimen/font_28px"
+                        android:textColor="@color/font_dark_gray"
+                        android:drawablePadding="@dimen/px14"
+                        android:button="@drawable/single_check_selector"
+                        android:layout_marginLeft="@dimen/px219"/>
+
+            </RadioGroup>
 
         </LinearLayout>
+
 
         <!--学生人数-->
         <include
@@ -459,6 +485,33 @@
                         android:textSize="@dimen/font_24px"
                         android:paddingLeft="@dimen/px64"
                         android:text="@string/publish_personal_page_tips"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/playback_layout"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/px22"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:id="@+id/playback_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/multi_check_selector"
+                        android:drawablePadding="@dimen/px28"
+                        android:text="@string/living_paly_back"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/font_24px"
+                        android:paddingLeft="@dimen/px64"
+                        android:text="@string/living_paly_back_tips"/>
 
             </LinearLayout>
 
