--- a/app/src/main/res/layout/item_lesson_schedule_date.xml
+++ b/app/src/main/res/layout/item_lesson_schedule_date.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2014-02-12 周三"
-        android:textSize="@dimen/font_28px"
-        android:textColor="@color/chocolate_light"
-        android:paddingLeft="@dimen/px32"
-        android:paddingTop="@dimen/px20"
-        android:paddingBottom="@dimen/px20"
-        android:layout_toLeftOf="@+id/tv_total_lessons"
-        />
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_total_lessons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="共好多节"
-        android:textSize="@dimen/font_24px"
-        android:textColor="@color/gray"
-        android:paddingRight="@dimen/px32"
-        android:paddingTop="@dimen/px20"
-        android:paddingBottom="@dimen/px20"
-        />
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/tv_total_lessons"
+            android:layout_weight="1"
+            android:paddingBottom="@dimen/px20"
+            android:paddingLeft="@dimen/px32"
+            android:paddingTop="@dimen/px20"
+            android:text="2014-02-12 周三"
+            android:textColor="@color/chocolate_light"
+            android:textSize="@dimen/font_28px" />
+
+        <TextView
+            android:id="@+id/tv_total_lessons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/px20"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px20"
+            android:text="共好多节"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/font_24px" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+    <include
+        android:id="@+id/no_data"
+        layout="@layout/item_home_no_lesson"></include>
+</merge>
