--- a/app/src/main/res/layout/layout_classroom_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_item.xml
@@ -52,7 +52,7 @@
             android:layout_marginLeft="@dimen/px10"
             android:layout_toRightOf="@+id/name"/>
 
-    <ImageView
+    <cn.xiaojs.xma.ui.widget.MessageImageView
             android:id="@+id/talk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
