教室，【bug1007】手机直播点击返回按钮直接停止直播,但没有返回到分屏模式下(直接竖屏黑屏)

--- a/app/src/main/res/layout/fragment_classroom_publish.xml
+++ b/app/src/main/res/layout/fragment_classroom_publish.xml
@@ -36,7 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px20"
             android:layout_marginTop="@dimen/px20"
-            android:src="@drawable/ic_delete"/>
+            android:src="@drawable/ic_delete"
+            android:visibility="gone"/>
 
     <!--视频推流顶部面板-->
     <include
