--- a/app/src/main/res/layout/activity_create_timetable.xml
+++ b/app/src/main/res/layout/activity_create_timetable.xml
@@ -35,7 +35,7 @@
                     android:text="@string/lesson_start_time"/>
 
             <TextView
-                    android:id="@+id/lesson_subject"
+                    android:id="@+id/lesson_time"
                     style="@style/LiveLessonRightEntrance"
                     android:text="@string/please_select"
                     />
@@ -91,22 +91,24 @@
                 android:orientation="vertical">
 
             <CheckBox
+                    android:id="@+id/record_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/px25"
-                    android:paddingBottom="@dimen/px28"
+                    android:paddingBottom="@dimen/px24"
+                    android:paddingLeft="@dimen/px33"
                     android:text="@string/video_setting"
                     android:textSize="@dimen/font_28px"
                     android:background="@color/white"
-                    android:button="@null"
-                    android:drawableRight="@drawable/multi_check_selector"/>
+                    android:button="@drawable/multi_check_selector"/>
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/radio_tips"
                     android:textSize="@dimen/font_26px"
-                    android:text="@string/video_auto_repaly_tips"/>
+                    android:text="@string/video_auto_repaly_tips"
+                    android:layout_marginLeft="@dimen/px64"/>
 
 
 
