--- a/app/src/main/res/layout/dialog_lesson_operate.xml
+++ b/app/src/main/res/layout/dialog_lesson_operate.xml
@@ -109,9 +109,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/px340"
-        android:paddingTop="@dimen/px90"
-        android:paddingBottom="@dimen/px90"
+        android:layout_height="@dimen/px320"
+        android:paddingLeft="@dimen/px30"
+        android:paddingRight="@dimen/px30"
         android:background="@color/white" />
 
     <View style="@style/DividerHorizontal" />
