--- a/app/src/main/res/layout/item_lesson_operate.xml
+++ b/app/src/main/res/layout/item_lesson_operate.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:gravity="center_horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:padding="@dimen/px40"
+    >
 
-    <ImageView
-        android:id="@+id/icon"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_op_apply"
-        />
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:textSize="@dimen/font_30px"
-        android:text=""
-        android:minEms="5"
-        android:textColor="@color/common_text"
-        android:layout_marginTop="@dimen/px30"
-        />
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_op_apply"
+            android:layout_centerInParent="true"
+            />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="@dimen/px150"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textSize="@dimen/font_30px"
+            android:text=""
+            android:gravity="center"
+            android:minEms="5"
+            android:textColor="@color/common_text"
+            android:layout_marginTop="@dimen/px30"
+            android:layout_below="@+id/icon"
+            />
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
