--- a/app/src/main/res/layout/item_lesson_operate.xml
+++ b/app/src/main/res/layout/item_lesson_operate.xml
@@ -6,6 +6,7 @@
     >
 
     <LinearLayout
+        android:id="@+id/btn_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
