--- a/app/src/main/res/layout/item_home_lesson.xml
+++ b/app/src/main/res/layout/item_home_lesson.xml
@@ -21,7 +21,7 @@
         />
 
     <TextView
-        android:id="@+id/tv_total_lessons"
+        android:id="@+id/tv_total_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="60分钟"
