--- a/app/src/main/res/layout/item_home_lesson.xml
+++ b/app/src/main/res/layout/item_home_lesson.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:background="@color/gray_item_bg"
@@ -170,6 +170,7 @@
         android:id="@+id/btn_more"
         android:layout_width="@dimen/px50"
         android:layout_height="@dimen/px50"
+        android:scaleType="center"
         android:src="@drawable/ic_list_more"
         android:layout_below="@+id/layout_teachers"
         android:layout_alignParentRight="true"
@@ -240,4 +241,4 @@
         android:visibility="gone"
         />
 
-</merge>
+</RelativeLayout>
