--- a/app/src/main/res/layout/activity_manual_add_student.xml
+++ b/app/src/main/res/layout/activity_manual_add_student.xml
@@ -69,9 +69,9 @@
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
             android:id="@+id/student_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="none"
-            android:dividerHeight="@dimen/px20"
             android:orientation="vertical"
+            android:background="@color/white"
             android:layout_marginTop="@dimen/px30"/>
 </LinearLayout>
