--- a/app/src/main/res/layout/item_home_lesson.xml
+++ b/app/src/main/res/layout/item_home_lesson.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:background="@color/gray_item_bg"
@@ -241,4 +241,4 @@
         android:visibility="gone"
         />
 
-</RelativeLayout>
+</merge>
